fix z-index

--- a/frontend/src/styles/_lists.scss
+++ b/frontend/src/styles/_lists.scss
@@ -380,6 +380,7 @@
 
     .dropdownCont {
       flex-grow: 1;
+      z-index: 2;
       button {
         margin-left: 0;
         margin-right: 0;
