--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -947,6 +947,7 @@ nav ul li:first-child {
 }
 .newTemplate .dropdownElement .dropdownCont {
   flex-grow: 1;
+  z-index: 2;
 }
 .newTemplate .dropdownElement .dropdownCont button {
   margin-left: 0;
